oh yeah lemme push these too

--- a/scripts/d2dstatus.html
+++ b/scripts/d2dstatus.html
@@ -270,5 +270,143 @@
             <li>GetThumbnail</li>
         </ul>
     </ul>
+    <p>OpenGL</p>
+    <ul>
+        <li>According to the <a href="https://registry.khronos.org/webgl/specs/latest/1.0/#5.14">WebGL spec...</a></li>
+        <ul>
+            <li>activeTexture</li>
+            <li>attachShader</li>
+            <li class="NO">bindAttribLocation</li>
+            <li>bindBuffer</li>
+            <li class="NO">bindFramebuffer</li>
+            <li class="NO">bindRenderbuffer</li>
+            <li>bindTexture</li>
+            <li class="NO">blendColor</li>
+            <li class="NO">blendEquation</li>
+            <li class="NO">blendEquationSeparate</li>
+            <li class="NO">blendFunc</li>
+            <li class="NO">blendFuncSeparate</li>
+            <li class="NO">checkFramebufferStatus</li>
+            <li>clear</li>
+            <li>clearColor</li>
+            <li class="NO">clearDepth</li>
+            <li class="NO">clearStencil</li>
+            <li class="NO">colorMask</li>
+            <li>compileShader</li>
+            <li>copyTexImage2D</li>
+            <li class="NO">copyTexSubImage2D</li>
+            <li>createBuffer</li>
+            <li class="NO">createFramebuffer</li>
+            <li>createProgram</li>
+            <li class="NO">createRenderbuffer</li>
+            <li>createShader</li>
+            <li>createTexture</li>
+            <li class="NO">cullFace</li>
+            <li class="NO">deleteBuffer</li>
+            <li class="NO">deleteFramebuffer</li>
+            <li>deleteProgram</li>
+            <li class="NO">deleteRenderbuffer</li>
+            <li">deleteShader</li>
+            <li class="NO">deleteTexture</li>
+            <li class="NO">depthFunc</li>
+            <li class="NO">depthMask</li>
+            <li class="NO">depthRange</li>
+            <li class="NO">detachShader</li>
+            <li class="NO">disable</li>
+            <li class="NO">disableVertexAttribArray</li>
+            <li>drawArrays</li>
+            <li class="NO">drawElements</li>
+            <li class="NO">enable</li>
+            <li>enableVertexAttribArray</li>
+            <li class="NO">finish</li>
+            <li class="NO">flush</li>
+            <li class="NO">framebufferRenderbuffer</li>
+            <li class="NO">framebufferTexture2D</li>
+            <li class="NO">frontFace</li>
+            <li>generateMipmap</li>
+            <li class="NO">getActiveAttrib</li>
+            <li class="NO">getActiveUniform</li>
+            <li class="NO">getAttachedShaders</li>
+            <li class="NO">getAttribLocation</li>
+            <li class="NO">getBufferParameter</li>
+            <li class="NO">getParameter</li>
+            <li class="NO">getError</li>
+            <li class="NO">getFramebufferAttachmentParameter</li>
+            <li>getProgramParameter</li>
+            <li>getProgramInfoLog</li>
+            <li class="NO">getRenderbufferParameter</li>
+            <li class="NO">getShaderParameter</li>
+            <li class="NO">getShaderPrecisionFormat</li>
+            <li>getShaderInfoLog</li>
+            <li class="NO">getShaderSource</li>
+            <li class="NO">getTexParameter</li>
+            <li class="NO">getUniform</li>
+            <li>getUniformLocation</li>
+            <li class="NO">getVertexAttrib</li>
+            <li class="NO">getVertexAttribOffset</li>
+            <li class="NO">hint</li>
+            <li class="NO">isBuffer</li>
+            <li class="NO">isEnabled</li>
+            <li class="NO">isFramebuffer</li>
+            <li class="NO">isProgram</li>
+            <li class="NO">isRenderbuffer</li>
+            <li class="NO">isShader</li>
+            <li class="NO">isTexture</li>
+            <li class="NO">lineWidth</li>
+            <li>linkProgram</li>
+            <li>pixelStorei</li>
+            <li class="NO">polygonOffset</li>
+            <li class="NO">renderbufferStorage</li>
+            <li class="NO">sampleCoverage</li>
+            <li class="NO">scissor</li>
+            <li>shaderSource</li>
+            <li class="NO">stencilFunc</li>
+            <li class="NO">stencilFuncSeparate</li>
+            <li class="NO">stencilMask</li>
+            <li class="NO">stencilMaskSeparate</li>
+            <li class="NO">stencilOp</li>
+            <li class="NO">stencilOpSeparate</li>
+            <li>texParameterf</li>
+            <li>texParameteri</li>
+            <li>uniform1f</li>
+            <li>uniform2f</li>
+            <li>uniform3f</li>
+            <li>uniform4f</li>
+            <li>uniform1i</li>
+            <li>uniform2i</li>
+            <li>uniform3i</li>
+            <li>uniform4i</li>
+            <li>useProgram</li>
+            <li>validateProgram</li>
+            <li class="NO">vertexAttrib1f</li>
+            <li class="NO">vertexAttrib2f</li>
+            <li class="NO">vertexAttrib3f</li>
+            <li class="NO">vertexAttrib4f</li>
+            <li class="NO">vertexAttrib1fv</li>
+            <li class="NO">vertexAttrib2fv</li>
+            <li class="NO">vertexAttrib3fv</li>
+            <li class="NO">vertexAttrib4fv</li>
+            <li>vertexAttribPointer</li>
+            <li>viewport</li>
+            <li>bufferData</li>
+            <li class="NO">bufferSubData</li>
+            <li class="NO">compressedTexImage2D</li>
+            <li class="NO">compressedTexSubImage2D</li>
+            <li class="NO">readPixels</li>
+            <li>texImage2D</li>
+            <li class="NO">texSubImage2D</li>
+            <li class="UNTESTED">uniform1fv</li>
+            <li class="UNTESTED">uniform2fv</li>
+            <li class="UNTESTED">uniform3fv</li>
+            <li class="UNTESTED">uniform4fv</li>
+            <li class="UNTESTED">uniform1iv</li>
+            <li class="UNTESTED">uniform2iv</li>
+            <li class="UNTESTED">uniform3iv</li>
+            <li class="UNTESTED">uniform4iv</li>
+            <li class="UNTESTED">uniformMatrix2fv</li>
+            <li class="UNTESTED">uniformMatrix3fv</li>
+            <li class="UNTESTED">uniformMatrix4fv</li>
+        </ul>
+    </ul>
 </body>
 </html>
