add a ton of regular opengl functions
im gonna go play fortnite now

--- a/scripts/d2dstatus.html
+++ b/scripts/d2dstatus.html
@@ -278,51 +278,51 @@
             <li>attachShader</li>
             <li class="NO">bindAttribLocation</li>
             <li>bindBuffer</li>
-            <li class="NO">bindFramebuffer</li>
-            <li class="NO">bindRenderbuffer</li>
+            <li>bindFramebuffer</li>
+            <li>bindRenderbuffer</li>
             <li>bindTexture</li>
-            <li class="NO">blendColor</li>
-            <li class="NO">blendEquation</li>
-            <li class="NO">blendEquationSeparate</li>
-            <li class="NO">blendFunc</li>
-            <li class="NO">blendFuncSeparate</li>
-            <li class="NO">checkFramebufferStatus</li>
+            <li>blendColor</li>
+            <li>blendEquation</li>
+            <li>blendEquationSeparate</li>
+            <li>blendFunc</li>
+            <li>blendFuncSeparate</li>
+            <li>checkFramebufferStatus</li>
             <li>clear</li>
             <li>clearColor</li>
-            <li class="NO">clearDepth</li>
-            <li class="NO">clearStencil</li>
-            <li class="NO">colorMask</li>
+            <li>clearDepth</li>
+            <li>clearStencil</li>
+            <li>colorMask</li>
             <li>compileShader</li>
             <li>copyTexImage2D</li>
-            <li class="NO">copyTexSubImage2D</li>
+            <li>copyTexSubImage2D</li>
             <li>createBuffer</li>
-            <li class="NO">createFramebuffer</li>
+            <li>createFramebuffer</li>
             <li>createProgram</li>
-            <li class="NO">createRenderbuffer</li>
+            <li>createRenderbuffer</li>
             <li>createShader</li>
             <li>createTexture</li>
-            <li class="NO">cullFace</li>
-            <li class="NO">deleteBuffer</li>
-            <li class="NO">deleteFramebuffer</li>
+            <li>cullFace</li>
+            <li>deleteBuffer</li>
+            <li>deleteFramebuffer</li>
             <li>deleteProgram</li>
-            <li class="NO">deleteRenderbuffer</li>
-            <li">deleteShader</li>
-            <li class="NO">deleteTexture</li>
-            <li class="NO">depthFunc</li>
-            <li class="NO">depthMask</li>
-            <li class="NO">depthRange</li>
-            <li class="NO">detachShader</li>
-            <li class="NO">disable</li>
-            <li class="NO">disableVertexAttribArray</li>
+            <li>deleteRenderbuffer</li>
+            <li>deleteShader</li>
+            <li>deleteTexture</li>
+            <li>depthFunc</li>
+            <li>depthMask</li>
+            <li>depthRange</li>
+            <li>detachShader</li>
+            <li>disable</li>
+            <li>disableVertexAttribArray</li>
             <li>drawArrays</li>
             <li class="NO">drawElements</li>
-            <li class="NO">enable</li>
+            <li>enable</li>
             <li>enableVertexAttribArray</li>
-            <li class="NO">finish</li>
-            <li class="NO">flush</li>
-            <li class="NO">framebufferRenderbuffer</li>
-            <li class="NO">framebufferTexture2D</li>
-            <li class="NO">frontFace</li>
+            <li>finish</li>
+            <li>flush</li>
+            <li>framebufferRenderbuffer</li>
+            <li>framebufferTexture2D</li>
+            <li>frontFace</li>
             <li>generateMipmap</li>
             <li class="NO">getActiveAttrib</li>
             <li class="NO">getActiveUniform</li>
@@ -344,15 +344,15 @@
             <li>getUniformLocation</li>
             <li class="NO">getVertexAttrib</li>
             <li class="NO">getVertexAttribOffset</li>
-            <li class="NO">hint</li>
-            <li class="NO">isBuffer</li>
-            <li class="NO">isEnabled</li>
-            <li class="NO">isFramebuffer</li>
-            <li class="NO">isProgram</li>
-            <li class="NO">isRenderbuffer</li>
-            <li class="NO">isShader</li>
-            <li class="NO">isTexture</li>
-            <li class="NO">lineWidth</li>
+            <li>hint</li>
+            <li>isBuffer</li>
+            <li>isEnabled</li>
+            <li>isFramebuffer</li>
+            <li>isProgram</li>
+            <li>isRenderbuffer</li>
+            <li>isShader</li>
+            <li>isTexture</li>
+            <li>lineWidth</li>
             <li>linkProgram</li>
             <li>pixelStorei</li>
             <li class="NO">polygonOffset</li>
@@ -360,12 +360,12 @@
             <li class="NO">sampleCoverage</li>
             <li class="NO">scissor</li>
             <li>shaderSource</li>
-            <li class="NO">stencilFunc</li>
-            <li class="NO">stencilFuncSeparate</li>
-            <li class="NO">stencilMask</li>
-            <li class="NO">stencilMaskSeparate</li>
-            <li class="NO">stencilOp</li>
-            <li class="NO">stencilOpSeparate</li>
+            <li>stencilFunc</li>
+            <li>stencilFuncSeparate</li>
+            <li>stencilMask</li>
+            <li>stencilMaskSeparate</li>
+            <li>stencilOp</li>
+            <li>stencilOpSeparate</li>
             <li>texParameterf</li>
             <li>texParameteri</li>
             <li>uniform1f</li>
@@ -394,7 +394,7 @@
             <li class="NO">compressedTexSubImage2D</li>
             <li class="NO">readPixels</li>
             <li>texImage2D</li>
-            <li class="NO">texSubImage2D</li>
+            <li>texSubImage2D</li>
             <li class="UNTESTED">uniform1fv</li>
             <li class="UNTESTED">uniform2fv</li>
             <li class="UNTESTED">uniform3fv</li>
