--- a/scripts/d2dstatus.html
+++ b/scripts/d2dstatus.html
@@ -136,7 +136,7 @@
         <li>ID2D1Bitmap</li>
         <ul>
             <li>CopyFromBitmap</li>
-            <li class="NO">CopyFromMemory</li>
+            <li class="NO i">CopyFromMemory</li>
             <li>CopyFromRenderTarget</li>
             <li>GetDpi</li>
             <li class="NOPE">GetFactory</li>
