DIRECT2D IS BASICALLY DONE + BIG REALIZATION
somehow this update broke windowshower.js (even though it still works)

ANYWAYS IM BASICALLY DONE WITH DIRECT2D BECAUSE I THINK I'VE DONE EVERYTHING I WAS GONNA DO ATP SO THE ONLY THING THAT'S LEFT IS FIXING JBS3 BECAUSE I'VE BEEN USING OBJECT TEMPLATES WRONG AND THEN ADDING DIRECT3D (which i still haven't finished learning about)

KTHXBAI

--- a/scripts/d2dstatus.html
+++ b/scripts/d2dstatus.html
@@ -101,12 +101,12 @@
             <li class="NOPE">CreateColorContextFromFilename</li>
             <li class="NOPE">CreateColorContextFromWicColorContext</li>
             <li class="NOPE">CreateCommandList</li>
-            <li class="NO">CreateEffect</li>
+            <li>CreateEffect</li>
             <li class="NO">CreateImageBrush</li>
             <li class="NO">DrawBitmap</li>
             <li class="NOPE">DrawGdiMetafile</li>
             <li class="NO">DrawGlyphRun</li>
-            <li class="NO">DrawImage</li>
+            <li>DrawImage</li>
             <li class="NO">GetDevice</li>
             <li class="NOPE">GetEffectInvalidRectangleCount</li>
             <li class="NOPE">GetEffectInvalidRectangles</li>
@@ -124,7 +124,7 @@
             <li class="NO">PushLayer</li>
             <li class="NO">SetPrimitiveBlend</li>
             <li class="NO">SetRenderingControls</li>
-            <li class="NO">SetTarget</li>
+            <li>SetTarget</li>
             <li class="NO">SetUnitMode</li>
         </ul>
         <li>ID2D1SolidColorBrush</li>
