ooooouuhh these canvas functions might be harder than i thought
oops forgot to push yesterday so some of these are past additions

--- a/scripts/d2dstatus.html
+++ b/scripts/d2dstatus.html
@@ -96,13 +96,13 @@
         </ul>
         <li>ID2D1DeviceContext</li>
         <ul>
-            <li class="NO">CreateBitmapFromDxgiSurface</li>
+            <li>CreateBitmapFromDxgiSurface</li>
             <li class="NOPE">CreateColorContext</li>
             <li class="NOPE">CreateColorContextFromFilename</li>
             <li class="NOPE">CreateColorContextFromWicColorContext</li>
             <li class="NOPE">CreateCommandList</li>
             <li>CreateEffect</li>
-            <li class="NO">CreateImageBrush</li>
+            <li class="UNTESTED">CreateImageBrush</li>
             <li class="NO">DrawBitmap</li>
             <li class="NOPE">DrawGdiMetafile</li>
             <li class="NO">DrawGlyphRun</li>
