oh yeah multiple windows is possible and random updates because i forgot to push lol
some of these edits i made today (d2dfontenum, d2dstatus, taskslifeifoundamongus)

some edits i made like the other day idk wintilemanager

--- a/scripts/d2dstatus.html
+++ b/scripts/d2dstatus.html
@@ -342,6 +342,29 @@
             <li class="NOPE">SetTypography</li>
             <li>SetUnderline</li>
         </ul>
+        <li>IDWriteFontFamily</li>
+        <ul>
+            <li>GetFamilyNames</li>
+            <li class="NO">GetFirstMatchingFont</li>
+            <li class="NO">GetFontCollection</li>
+            <li class="NO">GetMatchingFonts</li>
+            <li>GetFontCount</li>
+            <li>Release</li>
+        </ul>
+        <li>IDWriteFont</li>
+        <ul>
+            <li class="NO">CreateFontFace</li>
+            <li class="NO">GetFaceNames</li>
+            <li class="NO">GetInformationalStrings</li>
+            <li class="NO">GetMetrics</li>
+            <li>IsSymbolFont</li>
+            <li class="NO">GetFontFamily</li>
+            <li>GetSimulations</li>
+            <li>GetStretch</li>
+            <li>GetStyle</li>
+            <li>GetWeight</li>
+            <li>Release</li>
+        </ul>
         <li>ID2D1Bitmap</li>
         <ul>
             <li>CopyFromBitmap</li>
